Update fmt.Println to print 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </button>
 
       <div class="logo">
-        <img src="images/imger.jpeg" alt="Logo">
+        <img src="images/frt.png" alt="Logo">
       </div>
     </div>
 
